--- a/HW0.ipynb
+++ b/HW0.ipynb
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -279,14 +279,31 @@
      "text": [
       "1D array slice: [10 11 12 13 14 15 16 17 18 19]\n",
       "2D array:\n",
-      " [[ 0  1  2  3]\n",
-      " [10 11 12 13]\n",
-      " [20 21 22 23]\n",
-      " [30 31 32 33]\n",
-      " [40 41 42 43]]\n",
-      "2D array slice [12 22 32 42]\n",
-      "----------------------------------------\n",
-      "Index of largest element (in flattened array) 19\n"
+      " [[ 0 -1 -2 -3]\n",
+      " [10  9  8  7]\n",
+      " [20 19 18 17]\n",
+      " [30 29 28 27]\n",
+      " [40 39 38 37]]\n",
+      "2D array slice [ 8 18 28 38]\n",
+      "Index of largest element (in flattened array) 16\n",
+      "Max el 40\n",
+      "Index of smallest element (in flattened array) 3\n",
+      "Min el -3\n",
+      "Mean 18.5\n",
+      "square\n",
+      " [[   0    1    4    9]\n",
+      " [ 100   81   64   49]\n",
+      " [ 400  361  324  289]\n",
+      " [ 900  841  784  729]\n",
+      " [1600 1521 1444 1369]]\n",
+      "sum 370\n",
+      "std dev 14.186260959111108\n",
+      "mod [[ 0 49 48 47]\n",
+      " [10  9  8  7]\n",
+      " [20 19 18 17]\n",
+      " [30 29 28 27]\n",
+      " [40 39 38 37]]\n",
+      "----------------------------------------\n"
      ]
     }
    ],
@@ -298,16 +315,31 @@
     "\n",
     "# Slicing 2D arr\n",
     "def f(x, y):\n",
-    "    return 10 * x + y\n",
+    "    return 10 * x - y\n",
     "\n",
     "b = np.fromfunction(f, (5, 4), dtype=int)\n",
     "print(\"2D array:\\n\",b)\n",
     "print(\"2D array slice\",b[1:, 2])\n",
     "\n",
-    "\n",
-    "\n",
     "# Array ops:\n",
     "print('Index of largest element (in flattened array)', np.argmax(b))\n",
+    "print('Max el', np.max(b))\n",
+    "print('Index of smallest element (in flattened array)', np.argmin(b))\n",
+    "print('Min el', np.min(b))\n",
+    "print('Mean', np.mean(b))\n",
+    "# print('abs\\n', np.abs(b))\n",
+    "# print('exp\\n', np.exp(b))\n",
+    "# print('sqrt\\n', np.sqrt(b))\n",
+    "print('square\\n', np.square(b))\n",
+    "print('sum', np.sum(b))\n",
+    "print('std dev', np.std(b))\n",
+    "\n",
+    "# a = [[1, 0], [0, 1]]\n",
+    "# b = [[4, 1], [2, 2]]\n",
+    "# print(np.dot(a, b))\n",
+    "\n",
+    "# print(\"sign\",np.sign(b))\n",
+    "print(\"mod\", np.mod(b, 50))\n",
     "\n",
     "print('-'*40)\n",
     "\n",
@@ -321,10 +353,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 177,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 5 6]\n",
+      " [3 4 7 8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.ones((3,4), int)\n",
+    "np.zeros((3,4), int)\n",
+    "np.eye(5)\n",
+    "np.linspace(0, 10, 20)\n",
+    "\n",
+    "\n",
+    "arr1 = np.array([[1, 2],\n",
+    "                 [3, 4]])\n",
+    "\n",
+    "arr2 = np.array([[5, 6],\n",
+    "                 [7, 8]])\n",
+    "result = np.concatenate((arr1, arr2), axis=1)\n",
+    "print(result)"
+   ]
   },
   {
    "cell_type": "code",
