formatted output of code block >> py_dict

--- a/HW0.ipynb
+++ b/HW0.ipynb
@@ -341,14 +341,7 @@
     "# print(\"sign\",np.sign(b))\n",
     "print(\"mod\", np.mod(b, 50))\n",
     "\n",
-    "print('-'*40)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "print('-'*40)\n"
    ]
   },
   {
@@ -380,20 +373,6 @@
     "result = np.concatenate((arr1, arr2), axis=1)\n",
     "print(result)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
