Updated py_dict output

--- a/HW0.ipynb
+++ b/HW0.ipynb
@@ -157,7 +157,7 @@
     "    py_dict['playerID'].append(row['playerID'])\n",
     "    py_dict['salary'].append(row['salary'])\n",
     "\n",
-    "print(py_dict)"
+    "# print(py_dict)"
    ]
   },
   {
